Bug 1607672 - Improve font fallback for Dingbats block on macOS. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D59312